# Adaptive-MoE-Inference-Optimization

./: PROJECT_PLAN.md  README.md  execution.md
notebooks/: 01_baseline_analysis.ipynb  02_expert_activation_patterns.ipynb  03_ssm_vs_attention_memory.ipynb  04_final_results.ipynb
slurm/: 01_verify_env.sh  02_build_engine_fp8.sh  03_build_engine_bf16.sh  04_launch_triton.sh  05_baseline_benchmark.sh  06_nsight_profile.sh  07_optimized_benchmark.sh  interactive.sh
src/analysis/: compare_baselines.py  parse_results.py  plot_latency_breakdown.py  plot_throughput.py  run_benchmark.py
src/kernels/: CMakeLists.txt  kv_eviction_policy.cu  moe_router_profiler.cu  ssm_state_monitor.cu
src/profiling/: nsight_parser.py  profile_expert_activation.py  profile_kv_cache.py  profile_ssm_vs_attn.py
src/serving/: build_engine.sh  gen_triton_config.py  launch_triton.sh
src/serving/custom_backend/: config.pbtxt  model.py
